# epub2audio

./: .dockerignore  Dockerfile  README.md  app.py  convert.py  docker-compose.yml  pyproject.toml  requirements.txt
templates/: audio_list.html  done.html  index.html  progress.html
